---
source: examples/migration-cli/tests/embedded.rs
expression: fields_info.unwrap()
---
{
    "events": {
        "event1": "DEFINE EVENT event1 ON animal WHEN species = 'Homo Habillis' AND velocity > 545 THEN (SELECT * FROM crop)",
    },
    "fields": {
        "characteristics": "DEFINE FIELD characteristics ON animal TYPE array",
        "id": "DEFINE FIELD id ON animal TYPE record<animal>",
        "species": "DEFINE FIELD species ON animal TYPE string",
        "velocity": "DEFINE FIELD velocity ON animal TYPE int",
    },
    "indexes": {
        "species_speed_idx": "DEFINE INDEX species_speed_idx ON animal FIELDS velocity, characteristics UNIQUE",
    },
    "lives": {},
    "tables": {},
}
